# profitscout-pipeline

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yaml  ingestion-build.yaml  ingestion-ci.yaml  ingestion-deploy-staging.yaml
deploy/: README.md  ingestion.staging.env.example
docs/: ingestion-migration-checklist.md
src/profitscout_core/: README.md  __init__.py
src/profitscout_core/config/: README.md  __init__.py  models.py
src/profitscout_core/gcp_clients/: README.md
src/profitscout_core/io/: README.md
src/profitscout_core/logging/: README.md
src/profitscout_core/schemas/: README.md
src/profitscout_core/tests/: README.md
src/profitscout_core/util/: README.md
src/profitscout_ingestion/: README.md  __init__.py
src/profitscout_ingestion/clients/: __init__.py
src/profitscout_ingestion/docs/: ARTIFACTS.md  ENV_VARS.md  RELIABILITY.md
src/profitscout_ingestion/jobs/: __init__.py  runner.py
src/profitscout_ingestion/orchestrators/: __init__.py
src/profitscout_ingestion/pipelines/: __init__.py
src/profitscout_ingestion/pipelines/calendar/: __init__.py  pipeline.py
src/profitscout_ingestion/pipelines/options/: __init__.py  pipeline.py
src/profitscout_ingestion/pipelines/prices/: __init__.py  pipeline.py
